<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>

    <!-- Global Messages -->
    <string name="app_name">Acomp Diário</string>
    <string name="action_settings">Configurações</string>

    <!-- General Texts -->
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="txt_data">Data</string>
    <string name="txt_next">Próximo</string>
    <string name="txt_back">Voltar</string>

    <!-- Models -->
    <!--[singular]-->
    <string name="acompanhamento">Acompanhamento</string>
    <string name="categoria_cientifica">Categoria Científica</string>
    <string name="disciplina">Disciplina</string>
    <string name="assunto">Assunto</string>
    <string name="estudo">Estudo</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="natureza_do_projeto">Natureza do Projeto</string>
    <string name="dono_do_produto">Dono do Produto</string>
    <string name="projeto">Projeto</string>
    <string name="trabalho">Trabalho</string>
    <!--[plural]-->
    <string name="categorias_cientificas">Categorias Científicas</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="assuntos">Assuntos</string>
    <string name="acompanhamentos">Acompanhamentos</string>
    <string name="tecnologias">Tecnologias</string>
    <string name="naturezas_de_projeto">Naturezas de Projeto</string>
    <string name="donos_de_produto">Donos de Produto</string>
    <string name="projetos">Projetos</string>
    <string name="trabalhos">Trabalhos</string>

    <!-- Activity Titles -->
    <string name="title_activity_manage_categorias_cientificas">Categorias Científicas</string>
    <string name="title_activity_manage_disciplinas">Disciplinas</string>
    <string name="title_activity_cobaia">Cobaia</string>
    <string name="title_activity_manage_assuntos">Assuntos</string>
    <string name="title_activity_acompanhamento">Novo Acompanhamento</string>
    <string name="title_activity_acompanhamento_estudos">Acompanhamento Estudos</string>
    <string name="title_activity_acompanhamento_trabalhos">Acompanhamento Trabalhos</string>
    <string name="title_activity_acompanhamento_exercicios">Acompanhamento Exercícios</string>
    <string name="title_activity_exportar_bd">Exportar Banco de Dados</string>
    <string name="title_activity_listar_acompanhamentos">Listar Acompanhamentos</string>
    <string name="title_activity_index_estudo">Estudo</string>
    <string name="title_activity_index_trabalho">Trabalho</string>
    <string name="title_activity_index_ferramentas">Ferramentas</string>
    <string name="title_activity_manage_tecnologias">Tecnologias</string>
    <string name="title_activity_manage_naturezas_projeto">Naturezas de Projeto</string>
    <string name="title_activity_manage_donos_produto">Donos de Produto</string>
    <string name="title_activity_list_projetos">Meus Projetos</string>
    <string name="title_activity_new_projeto">Novo Projeto</string>
    <string name="title_activity_sobre">Sobre</string>


    <!-- Labels and Texts -->
    <string name="txt_acomp_diario">Acompanhamento Diário</string>
    <string name="txt_name">Nome</string>
    <string name="txt_abbreviated_name">Nome Abreviado</string>
    <string name="txt_description">Descrição</string>
    <string name="txt_hint_edt_categorias_cientificas">Nome da categoria científica</string>
    <string name="txt_hint_edt_disciplinas">Nome da disciplina</string>
    <string name="txt_hint_edt_assuntos">Nome do assunto</string>
    <string name="txt_hint_edt_data_referente">Insira a data a qual o acompanhamento se refere.</string>
    <string name="txt_hint_novo_projeto">Nome do projeto</string>

    <string name="txt_hint_edt_sql_valido">Insira um SQL válido.</string>
    <string name="txt_save">Salvar</string>
    <string name="txt_empty_list">Até o momento não existem itens cadastrados.</string>
    <string name="title_confirm_delete">Confirmar Exclusão</string>
    <string name="msg_confirm_delete">Tem certeza que deseja excluir este item?</string>
    <string name="txt_data_referente">Data Referente</string>
    <string name="txt_new_item_name">Nome do novo item</string>
    <string name="txt_new_item_description">Descrição do novo item</string>

    <!-- Success and Fail Messages -->
    <string name="model_successful_saved">%1s salvo(a) com sucesso!</string>
    <string name="model_successful_inserted">%1s inserido(a) com sucesso!</string>
    <string name="model_successful_updated">%1s editado(a) com sucesso!</string>
    <string name="model_successful_deleted">%1s excluído(a) com sucesso!</string>
    <string name="failed_saving_model">Falha ao salvar %1s</string>
    <string name="failed_inserting_model">Falha ao inserir %1s</string>
    <string name="failed_updating_model">Falha ao editar %1s</string>
    <string name="failed_deleting_model">Falha ao excluir %1s</string>
    <string name="failed_loading_model_list">Falha ao carregar lista de %1s(s)</string>
    <string name="txt_assunto_pai">Assunto Pai</string>
    <string name="txt_mudar">Mudar</string>

    <!-- IndexFerramentasActivity -->
    <string name="index_ferramentas_exportar_importar_bd">Exportar / Importar BD</string>
    <string name="index_ferramentas_lacunas_no_acompanhamento">Lacunas no Acompanhamento</string>
    <string name="index_ferramentas_acompanhamento_de_peso">Acompanhamento de Peso</string>
    <string name="index_ferramentas_preferencias">Preferencias</string>


    <!-- AcompanhamentoEstudosActivity -->
    <string name="acompanhamento_estudos_txt_tempo_estudo">Tempo de Estudo</string>
    <string name="acompanhamento_estudos_assunto_doesnt_contains_subassuntos">Este assunto não tem nenhum subassunto</string>
    <string name="acompanhamento_estudos_assuntos_estudados">Assuntos Estudados</string>

    <!-- AcompanhamentoTrabalhosActivity -->
    <string name="acompanhamento_trabalhos_tempo_trabalho">Tempo Trabalhado</string>
    <string name="acompanhamento_trabalhos_projetos_trabalhados">Projetos Trabalhos</string>

    <!-- AcompanhamentoExerciciosActivity -->
    <string name="acompanhamento_exercicios_txt_tempo_aerobica">Tempo de Aeróbica</string>
    <string name="acompanhamento_exercicios_txt_tempo_musculacao">Tempo de Musculação</string>
    <string name="acompanhamento_exercicios_txt_chk_ex_ur">Exc Ur?</string>

    <!-- Exportar BD -->
    <string name="exportar_bd_btn_exec_sql">Executar SQL</string>
    <string name="exportar_bd_importar_bd">Importar Banco de Dados</string>
    <string name="exportar_bd_caminho_bd">Ex: Download/bd_acompanhamento.db3</string>

    <!-- SobreActivity -->
    <string name="sobre">Sobre</string>
    <string name="acompanhamento_estudos_app">Acompanhamento Estudos App</string>

    <!-- NewProjetoActivity & ListProjetosActivity -->
    <string name="new_projeto_novo_projeto">Novo Projeto</string>
    <string name="list_projetos_novo_projeto">Novo Projeto</string>

</resources>
