<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.activity.ExportarBDActivity">

    <Button
        android:id="@+id/exportar_bd_btn_exportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_exportar_bd" />
    
    <Button
        android:id="@+id/exportar_bd_btn_importar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportar_bd_importar_bd" />
    
    <EditText
        android:id="@+id/exportar_bd_edt_path_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exportar_bd_caminho_bd" />
    
    <EditText
        android:id="@+id/exportar_bd_edt_sql"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_edt_sql_valido"
        android:visibility="invisible" />
    
    <Button
        android:id="@+id/exportar_bd_btn_exec_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportar_bd_btn_exec_sql"
        android:visibility="invisible" />

</LinearLayout>
