<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="joaopaulo.acompanhamentodiario.view.activity.ManageTecnologiasActivity"
    android:background="@color/light_gray"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/manage_tecnologias_txv_categorias_cientificas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_manage_tecnologias"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/manage_tecnologias_txv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <EditText
        android:id="@+id/manage_tecnologias_edt_name_tecnologia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/txt_new_item_name" />

    <Button
        android:id="@+id/manage_tecnologias_btn_save_tecnologia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_save" />

    <ListView
        android:id="@+id/manage_tecnologias_ltv_itens_tecnologia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/manage_tecnologias_txv_empty_tecnologia"
        android:text="@string/txt_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray" />

</LinearLayout>