<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activity.AcompanhamentoExerciciosActivity"
    android:background="@color/light_gray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_acompanhamento_exercicios"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp"
        android:textColor="@color/blue" />

	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/acompanhamento_exercicios_txt_tempo_aerobica"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="@color/gray" />
	
		<EditText
		    android:id="@+id/acompanhamento_exercicios_edt_tempo_aerobica"
		    android:layout_marginLeft="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="number" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/acompanhamento_exercicios_txt_tempo_musculacao"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="@color/gray" />
	
		<EditText
		    android:id="@+id/acompanhamento_exercicios_edt_tempo_musculacao"
		    android:layout_marginLeft="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="number" />
	</LinearLayout>

	<CheckBox
	    android:id="@+id/acompanhamento_exercicios_chk_flg_ex_ur"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/acompanhamento_exercicios_txt_chk_ex_ur" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/acompanhamento_exercicios_btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_back"
            android:drawableStart="@drawable/arrow_rl"
            android:drawablePadding="@dimen/drawable_end_dft_padding" />

        <Button
            android:id="@+id/acompanhamento_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            android:drawableEnd="@drawable/success_icon"
            android:drawablePadding="@dimen/drawable_end_dft_padding"/>
    </LinearLayout>
</LinearLayout>
