<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.activity.IndexEstudoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/book"
            android:id="@+id/index_estudo_img_book"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_index_estudo"
            android:id="@+id/index_estudo_txv_estudo"
            android:layout_marginTop="5dp"
            android:textColorHighlight="@color/gray" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categorias_cientificas"
        android:id="@+id/index_estudo_btn_categorias_cientificas"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dft_index_buttons_margin"
        android:layout_marginTop="@dimen/dft_index_buttons_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disciplinas"
        android:id="@+id/index_estudo_btn_disciplinas"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dft_index_buttons_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assuntos"
        android:id="@+id/index_estudo_btn_assuntos"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
