<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="joaopaulo.acompanhamentodiario.view.activity.ListProjetosActivity"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/list_projetos_txv_projetos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projetos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue" />

    <ListView
        android:id="@+id/list_projetos_ltv_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/list_projetos_txv_empty_items"
        android:text="@string/txt_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/list_projetos_btn_novo_projeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_projetos_novo_projeto"
        android:drawableEnd="@drawable/add"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp" />

</LinearLayout>